# jupyter-aemet-station-graphs

./: .pre-commit-config.yaml  AEMET_Station_Data.ipynb  LICENSE.md  README.md  pyproject.toml
