[tool.poetry]
name = "jupyter-astrofoto"
version = "0.1.0"
description = ""
authors = ["Oliver Gutierrez <ogutsua@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
jupyterlab = "^3.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
